--- a/_includes/themes/dutchaug/default.html
+++ b/_includes/themes/dutchaug/default.html
@@ -47,6 +47,10 @@
         {{ content }}
       </div>
 
+      <div class="sharing">
+        {% include themes/dutchaug/sharing_items %}
+      </div>
+      
       <footer>
         <p>&copy; {{ site.author.name }} 2012 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
@@ -56,6 +60,7 @@
 
     </div> <!-- /container -->
 
+    {% include themes/dutchaug/sharing_setup %}
     {% include JB/analytics %}
   </body>
 </html>
