enabling the custom theme
this adds some custom sharing stuff in the footer

--- a/_includes/themes/dutchaug/default.html
+++ b/_includes/themes/dutchaug/default.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="sharing">
-        {% include themes/dutchaug/sharing_items %}
+        {% include JB/sharing %}
       </div>
       
       <footer>
@@ -60,7 +60,6 @@
 
     </div> <!-- /container -->
 
-    {% include themes/dutchaug/sharing_setup %}
     {% include JB/analytics %}
   </body>
 </html>
