--- a/_includes/themes/dutchaug/default.html
+++ b/_includes/themes/dutchaug/default.html
@@ -47,10 +47,10 @@
         {{ content }}
       </div>
 
-<!--       <div class="sharing">
+      <div class="sharing">
         {% include JB/sharing %}
-      </div>
- -->      
+      </div> <!-- end sharing -->
+      
       <footer>
         <p>&copy; {{ site.author.name }} 2012 
           with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
